# reveng-main

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  .yamllint  CHANGELOG.md  CONTRIBUTING.md  CROSS_PLATFORM_TEST_REPORT.md  Dockerfile  Makefile  PRE_PUBLICATION_CHECKLIST.md  README.md  REVENG_Deployment_Test_Report.md  REVENG_Updated_Deployment_Report.md  SECURITY.md  SECURITY_AUDIT_REPORT.md  bandit-report.json  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements-java.txt  requirements-optional.txt  requirements-security.txt  requirements.txt  reveng.py  reveng_analyzer.py  setup.py
.ai/: README.md  common-tasks.md  project-overview.md  tool-guide.md  troubleshooting.md
.claude/: settings.local.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  RELEASE_CHECKLIST.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml  question.md  question.yml  security_report.md
.github/workflows/: build.yml  ci.yml  docker-multiarch.yml  docker.yml  docs.yml  lint.yml  release.yml  security.yml  test.yml  tests.yml
.reveng/: config.yaml  validation.yaml.example  validation_policy.json
docs/: CHANGELOG.md  DEVELOPER_GUIDE.md  QUICK_START.md  README.md  RELEASE_NOTES.md  REVENG_OVERHAUL_PLAN.md  USER_GUIDE.md  generate_documentation.py  index.md
docs/ai-assistant-guide/: tool-selection-matrix.md
docs/api/: AI_API_REFERENCE.md  API_REFERENCE.md  output-schema.json
docs/architecture/: ARCHITECTURE.md  CODE_FLOW_ANALYSIS.md  IMPLEMENTATION_SUMMARY.md  QUICK_START_IMPROVEMENTS.md  WORLD_CLASS_ROADMAP.md
docs/case-studies/: karp-analysis.md
docs/development/: PROJECT_STRUCTURE.md  ROADMAP.md  TODO.md  release-checklist.md
docs/getting-started/: quick-start.md  troubleshooting.md
docs/guides/: AI_AGENT_DESIGN_ANALYSIS.md  AI_ASSISTANT_GUIDE.md  CLAUDE_INTEGRATION.md  COMPLETE_SETUP_GUIDE.md  NEW_FEATURES_GUIDE.md  QUICK_START.md  REBUILD_WORKFLOW_EXAMPLE.md  advanced-analysis.md  installation.md  migration.md  pipeline-development.md  plugin-development.md  windows-analysis.md
docs/legal/: PRIVACY.md
docs/reports/: implementation-complete.md  improvements-analysis.md  transformation-summary.md  validation-report.md
docs/user-guide/: cli-usage.md
examples/: README.md
examples/advanced/: README.md
examples/basic/: README.md
examples/use-cases/: binary-patching.md  legacy-recovery.md  malware-analysis.md
models/: .gitignore  .gitkeep  README.md  download_models.py  general_metadata.json  memory_corruption_metadata.json
scripts/: README.md  validate_implementation.py
scripts/deployment/: deploy_enhanced_analysis.py
scripts/development/: lint_codebase.bat  lint_codebase.py
scripts/ghidra/: analyze_imports.py  extract_functions.py
scripts/maintenance/: clean_outputs.py  cleanup_legacy.py  generate_docs.py
scripts/setup/: bootstrap_linux.sh  bootstrap_windows.bat  setup_java_analysis.py  verify_ai_setup.py  verify_installation.py
scripts/testing/: run_enhanced_tests.py  run_examples.py
src/reveng/: __init__.py  __main__.py  ai_api.py  analyzer.py  api.py  cli.py  version.py
test_samples/: HelloWorld.java  ObfuscatedExample.java  README.md
tests/: .gitignore  README.md  conftest.py  run_all_tests.py  test_advanced_malware_classifier.py  test_cli.py  test_code_gen.py  test_config_tunables.py  test_documentation.py  test_educational_generator.py  test_enhanced_analysis_integration.py  test_enhanced_mitre.py  test_enhanced_modules.py  test_examples.py  test_imports.py  test_installation.py  test_mitre_simple.py  test_ml_enhancements.py  test_network_topology.py  test_parser_fixes.py  test_pipeline.py
tests/e2e/: test_cli_workflow.py  test_cli_workflows.py  test_complete_workflow.py
tests/fixtures/: README.md
tests/integration/: test_automated_pipeline.py  test_ml_workflow.py  test_pipeline.py
tests/performance/: test_analysis_speed.py  test_memory_usage.py
tests/security/: test_input_validation.py
tests/unit/: test_analyzer.py  test_automated_analysis_pipeline.py  test_business_logic_extractor.py  test_cli.py  test_dependency_manager.py  (+9 more)
web_interface/: .env.example  Dockerfile.ai-service  Dockerfile.backend  Dockerfile.frontend  Dockerfile.worker  QUICK_START.md  README.md  STATUS.md  docker-compose.yml  nginx.conf  package-lock.json  package.json
(+167 files in other folders)
